--- a/worty-person_style.css
+++ b/worty-person_style.css
@@ -141,3 +141,18 @@ body{
 @keyframes caret{
     50% { border-right-color: whitesmoke}
 }
+
+@media only screen and (max-width: 540px) {
+    .box-button{
+        padding: 20px; 
+    }
+    .box-button button{
+        width: auto;
+    }
+    .nav{
+        width: 100%;
+    }
+    .nav a{
+        padding: 0;
+    }
+  }
